# LIDEG

./: README.md
blender/: README  UpdateScene.py  script.py
cmaketoolchainfiles/: UofA_HPC_gnu.cmake
code/: CMakeLists.txt  Nlayer.cpp  WFs.hpp  analysis.cpp  data_writer.cpp  debug.cpp  diffraction.cpp  external_field.hpp  graphenemodel.hpp  main.cpp  parser.hpp  rspace.cpp  utils.hpp
code/Nlayer/: nlayer.hpp
code/model1/: WFs.hpp  graphene.hpp
code/model2/: graphene2.hpp
code/utils/: grid.hpp  integrator.hpp  multiarray.hpp  utils.hpp
examples/: input.ini  run.sh  run_diff.sh  run_kspace.sh  run_plotting.sh  run_rspace.sh
examples/field/: field_generator.ipynb
libs/odeint/: uBLASBoostOdeint.hpp
mpi_manager/: manager.py
python/: comb.py  main.py  model.py  params.py  plot_full.py  plot_reciprocal.py
python/plots/: plot_2D.py  plot_3D.py  plot_all.py  plot_debug.py  plot_orb2D.py  plot_plotly.py  plot_pyqtgraph.py  plot_reciprocal.py  plot_rspace.py  plot_tdata.py
python/plots_new/: plot2D_kspace.py  plot2D_rspace.py  plot3D_rspace.py
qe_cal/: compare.py  extract.py  get_C_coeff.py  readme.md  run_basic.sh  run_eigen.sh  run_wf.sh
qe_cal/cpp/: CMakeLists.txt  F_S_nm_re.cpp  density.cpp  density_reduced.cpp
qe_cal/inputs/: graphene_2D_wf.in  graphene_bands.in  graphene_bands_back.in  graphene_bands_pp.in  graphene_dos.in  graphene_nscf.in  graphene_scf.in  graphene_scf_back.in  projwfc.in  wfck2r.in
qe_cal/python/: extract_oct.py  get_all.py  kpoint.py  plot_energy.py  plot_int_z.py  plot_wfc2kr.py
